# jc-algorithm

./: CMakeLists.txt  CMakePresets.json  README.md
include/base/: AutoBitConverter.cpp  AutoBitConverter.h  Bit.h  BitConverter.cpp  BitConverter.h  Counter.h  HandleWrapper.h  ISignalSource.h  MutexHandleWrapper.h  RentedPtrFactory.cpp  RentedPtrFactory.h  Stream.cpp  Trigger.h  Wrapper.cpp  Wrapper.h
include/base/container/: IList.h  IQueue.h  List.h  Queue.h
include/base/math/: BaseConverter.cpp  BaseConverter.h  Fraction.cpp  Fraction.h
include/base/modbus/: ModbusCrc16.cpp  ModbusCrc16.h
include/base/pipe/: IConsumer.h  IPipeSource.h  ISource.h
include/base/signal/: DoubleSinSignalSource.cpp  DoubleSinSignalSource.h  IRealTimeSignalSource.cpp  IRealTimeSignalSource.h  ISignalSource.cpp  ISignalSource.h  PeriodicSamplingClock.cpp  PeriodicSamplingClock.h  SinSignalSource.cpp  SinSignalSource.h
include/base/stream/: CircleBufferMemoryStream.cpp  CircleBufferMemoryStream.h  JoinedStream.cpp  JoinedStream.h  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h
include/base/task/: CancellationToken.cpp  CancellationToken.h  CancellationTokenSource.cpp  CancellationTokenSource.h  TaskCanceledException.cpp  TaskCanceledException.h
include/jc-algorithm/: AutoBitConverter.cpp  AutoBitConverter.h  BitConverter.cpp  BitConverter.h
